# Zavrsni_rad

./: README.md
calibration/results/: april-camchain.yaml  april-results-cam.txt
gazebo/gazebo_models/delta_robot/: model.config  model.sdf
gazebo/gazebo_models/delta_robot/meshes/: crta_delta_robot.STL
gazebo/gazebo_models/kutija1/: model.config  model.sdf
gazebo/gazebo_models/kutija1/meshes/: crta_kutija1.STL
gazebo/gazebo_models/kutija2/: model.config  model.sdf
gazebo/gazebo_models/kutija2/meshes/: crta_kutija2.STL
gazebo/gazebo_models/poster/: model.config  model.sdf
gazebo/gazebo_models/poster/materials/scripts/: Poster.material
gazebo/gazebo_models/simple_ur3_robot/: model.config  model.sdf
gazebo/gazebo_models/simple_ur3_robot/meshes/: simple_ur3_robot.STL
gazebo/gazebo_models/stolac1/: model.config  model.sdf
gazebo/gazebo_models/stolac1/meshes/: crta_stolac1.STL
gazebo/gazebo_worlds/: crta_dynamic.world  gazebo.world
izmjene/: README.md
izmjene/orbslam3_wrapper/: orbslam3_tello.launch.py
izmjene/orbslam3_wrapper/config_monocular/: tello_camera.yaml  tello_camera_real.yaml
izmjene/orbslam3_wrapper/monocular/: monocular-slam-node-real.cpp  monocular-slam-node-sim.cpp  monocular-slam-node.hpp
izmjene/tello_ros/: camera_info.yaml  tello.xml  tello_joy_node.cpp  tello_joy_node.hpp
src/a_star_test/: README.md  package.xml  setup.cfg  setup.py
src/a_star_test/a_star_test/: a_star.py  crta_follower.py  follower_dyn_obs.py  gazebo_a_star.py  gazebo_dyn_obs.py  gazebo_follower.py  save_pointcloud.py  scan_to_range.py  tello_map_real.py
src/a_star_test/config/: zavrsni.rviz
src/a_star_test/launch/: CRTA_path_planning_launch.py  astar_test_launch.py  gazebo_dynamic_obs_launch.py  gazebo_path_planning_launch.py
src/moving_box_plugin/: CMakeLists.txt  package.xml
src/moving_box_plugin/src/: moving_box2_plugin.cpp  moving_box_plugin.cpp
